welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: reassignment to val
if (aSmile=bSmile) {
          ^